@@ -109,10 +109,11 @@ struct math_type_traits<SQuaternion> : public math_type_traits_base<SQuaternion>
 	template<typename _TT>
 	static inline SQuaternion interpolate( SQuaternion const& a1, SQuaternion const& a2, _TT const& t ) {
 		SQuaternion qo;
-		return *D3DXQuaternionSlerp( &qo, &a1, &a2, t );
+		//qo.slerp( a1, a2, t ); // do not use slerp!
+		qo.nlerp( a1, a2, t );
+		return qo;
 	};
 
-	// TBD: slerp for now
 	template<typename _TT>
 	static inline SQuaternion cm_interpolate( SQuaternion const& a0, SQuaternion const& a1, SQuaternion const& a2, SQuaternion const& a3, _TT const& t ) {
 		SQuaternion qa, qb, qc, qo;
