@@ -1,6 +1,7 @@
 
 Dingus small rare developments
 ========
+060225: quaternion slerp replaced by nlerp everywhere!
 060219: renderFrustum, renderAABB added to DebugRenderer.
 060216: Fix some mouse capture issues in GUI code.
 060212: Migrated to VS.NET2003 (finally!), VC6 support may break at any
